# ExifRename

./: CLAUDE.md  package-lock.json  package.json
.claude/: settings.local.json
.claude/memory/: MEMORY.md  project_exiffilerenamer.md
.github/workflows/: build.yml  windows.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  rename.rs  scan.rs
src-tauri/src/log_manager/: mod.rs
src-tauri/src/metadata/: exif_reader.rs  ffprobe_reader.rs  mod.rs  types.rs  video_reader.rs
src-tauri/src/renamer/: mod.rs
src/lib/: stores.ts  tauri.ts  types.ts
src/lib/components/: ConfirmDialog.svelte  FileTable.svelte  FolderSelector.svelte  OptionsBar.svelte  StatusBar.svelte  UndoPanel.svelte
src/routes/: +page.svelte
