[package]
name = "exiffilerenamer"
version = "0.1.0"
description = "ExifFileRenamer - rename files based on EXIF metadata"
authors = []
edition = "2021"

[lib]
name = "exiffilerenamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["sync"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
thiserror = "1"
dirs-next = "2"
